--- a/Web/Notas02.WebApi/Notas02.WebApi.csproj
+++ b/Web/Notas02.WebApi/Notas02.WebApi.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\..\Application\Notas02.Application\Notas02.Application.csproj" />
     <ProjectReference Include="..\..\Application\Notas02.Application.Core\Notas02.Application.Core.csproj" />
     <ProjectReference Include="..\..\Application\Notas02.Application.Entities\Notas02.Application.Entities.csproj" />
+    <ProjectReference Include="..\..\Application\Notas02.Application.Data.Dapper\Notas02.Application.Data.Dapper.csproj" />
   </ItemGroup>
 
 </Project>
