--- a/src/notas02-react-app/package.json
+++ b/src/notas02-react-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "history": "^4.7.2",
     "react": "^16.4.0",
