--- a/src/notas02-dotnetcore-app/Application/Notas02.Application/Notas02.Application.csproj
+++ b/src/notas02-dotnetcore-app/Application/Notas02.Application/Notas02.Application.csproj
@@ -16,6 +16,8 @@
     <ProjectReference Include="..\Notas02.Application.Entities\Notas02.Application.Entities.csproj" />
     <ProjectReference Include="..\Notas02.Application.Core\Notas02.Application.Core.csproj" />
     <ProjectReference Include="..\Notas02.Application.Data.Dapper\Notas02.Application.Data.Dapper.csproj" />
+    <ProjectReference Include="..\Notas02.Application.UserManager.Identity\Notas02.Application.UserManager.Identity.csproj" />
+    <ProjectReference Include="..\Notas02.Application.UserManager\Notas02.Application.UserManager.csproj" />
   </ItemGroup>
 
 </Project>
