--- a/src/notas02-dotnetcore-app/Web/Notas02.WebApi/appsettings.json
+++ b/src/notas02-dotnetcore-app/Web/Notas02.WebApi/appsettings.json
@@ -14,5 +14,10 @@
         "Default": "Warning"
       }
     }
+  },
+  "TokenConfigurations": {
+    "Audience": "ExemploAudience",
+    "Issuer": "ExemploIssuer",
+    "Seconds": 360
   }
 }
