--- a/src/notas02-dotnetcore-app/Application/Notas02.Application.UserManager/Notas02.Application.UserManager.csproj
+++ b/src/notas02-dotnetcore-app/Application/Notas02.Application.UserManager/Notas02.Application.UserManager.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
